--- a/clash/conifer.cabal
+++ b/clash/conifer.cabal
@@ -18,7 +18,8 @@ extra-source-files:  CHANGELOG.md
 
 library
   exposed-modules:
-       TopFilters
+       ExampleFilters
+      ,ExampleCoeffs
       ,Filter.THUtil
       ,Filter.FFA
       ,Filter.Serial
@@ -99,7 +100,6 @@ test-suite conifer-test
   main-is:             Spec.hs
 
   other-modules:
-       Coeffs
       ,Filter.FFASpec
       ,Filter.FFA_TH
       ,Filter.PolyphaseSpec
