--- a/clash/conifer.cabal
+++ b/clash/conifer.cabal
@@ -77,7 +77,7 @@ library
 
   build-depends:
        base >=4.13 && <4.14
-      ,clash-prelude >=1.2 && <1.3
+      ,clash-prelude >=1.2 && <1.6
       ,template-haskell >=2.15 && <2.16
       ,QuickCheck >=2.13 && <2.14
       ,reflection >=2.1 && <2.2
@@ -95,7 +95,7 @@ library
 
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options: -fplugin=GHC.TypeLits.Normalise -fplugin=GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=100
+  ghc-options: -fplugin=GHC.TypeLits.Normalise -fplugin=GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver -fconstraint-solver-iterations=100 -fexpose-all-unfoldings -fno-worker-wrapper
 
 
 test-suite conifer-test
